HIVE-13087: LLAP: Print STW pause time and useful application time (Prasanth Jayachandran reviewed by Gopal V)